--- a/style.css
+++ b/style.css
@@ -24,10 +24,12 @@ body {
 .pane.pane-list {
   top:0;
   bottom:0;
-  left:30%;
+  /*left:30%;*/
+  left:0;
   right:30%;
   position: absolute;
   overflow-y: auto;
+  height: 50%;
 }
 
 .pane.pane-data {
@@ -39,6 +41,14 @@ body {
   right: 0;
   position: absolute;
   overflow-y: auto;
+}
+
+#panel{
+  background-color: #F0F0F0;
+}
+
+#playerContainer{
+  max-height: 80%;
 }
 
 
@@ -92,7 +102,8 @@ body {
 
 
   .pane.pane-list {
-    left:30%;
+    /*left:30%;*/
+    left:0;
     right:30%;
   }
 
